0029500: Visualization - AIS_Point dynamic highlighting is not drawn on RedrawImmediate

ZLayer for Dynamic highlighting of AIS_Point has been set to Graphic3d_ZLayerId_Top
and of Selected highlighting to Graphic3d_ZLayerId_UNKNOWN,
to follow the behavior of normal AIS object.